--- a/pwsh/completion/ChatGptPredictor/ChatGptPredictor.csproj
+++ b/pwsh/completion/ChatGptPredictor/ChatGptPredictor.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.4.0" />
+  </ItemGroup>
+
 </Project>
