grc exiftool spike some ideas

--- a/.grc/grc.conf
+++ b/.grc/grc.conf
@@ -40,3 +40,6 @@ conf.pip_list
 ^([/\w\.]+\/)?git\s+config\s.*--list\b
 conf.git_config_list
 
+# exiftool -list
+^([/\w\.]+\/)?exiftool\b
+conf.exiftool_list
