--- a/.config/bat/config
+++ b/.config/bat/config
@@ -11,6 +11,7 @@
 --map-syntax "*.csproj:XML"
 --map-syntax "*.nuspec:XML"
 --map-syntax "grc.conf:INI" # close enough for primary grc.conf (regex/file pairs, with comments)
+--map-syntax "config.txt:INI" # raspberry pi /boot/fimrware/config.txt # PRN filter to full file path /boot/config.txt and /boot/firmware/config.txt?
 
 # default style:
 --paging=never
