--- a/.config/bat/config
+++ b/.config/bat/config
@@ -1,10 +1,11 @@
-
+#
 # https://github.com/sharkdp/bat#configuration-file
 
 # :( 'ansi-dark' is deprecated and replaced by 'ansi' per 'bat' cli
 --theme OneHalfDark
 
 ## File associations
+# bat --list-languages to see builtin mappings for examples (esp dir matching too)
 --map-syntax "*.repo:INI"
 --map-syntax "*.vbproj:XML"
 --map-syntax "packages.config:XML"
@@ -12,6 +13,10 @@
 --map-syntax "*.nuspec:XML"
 --map-syntax "grc.conf:INI" # close enough for primary grc.conf (regex/file pairs, with comments)
 --map-syntax "config.txt:INI" # raspberry pi /boot/fimrware/config.txt # PRN filter to full file path /boot/config.txt and /boot/firmware/config.txt?
+
+# PRN all /etc/ files treated as ini by default? (w/o override builtin mappings? i.e. /etc/nginx/** => nginx language)
+--map-syntax "/opt/homebrew/etc/**/*.conf:INI" # homebrew config files (ie service config files like libvirtd)
+# PRN etc/libvirt/**/*.conf  or  **/etc/libvirt/**/*.conf:INI
 
 # default style:
 --paging=never
