--- a/.grc/grc.conf
+++ b/.grc/grc.conf
@@ -43,3 +43,7 @@ conf.git_config_list
 # exiftool -list
 ^([/\w\.]+\/)?exiftool\b
 conf.exiftool_list
+
+# original KubeCTL rule:
+^([/\w\.]+\/)?kubectl((?!edit|exec|run|go-template).)*$
+conf.kubectl
