modify to only trigger look ahead exclusion if the words are surroudned by spaces ... i.e. 'kubectl edit foo'

--- a/.grc/grc.conf
+++ b/.grc/grc.conf
@@ -45,5 +45,8 @@ conf.git_config_list
 conf.exiftool_list
 
 # original KubeCTL rule:
-^([/\w\.]+\/)?kubectl((?!edit|exec|run|go-template).)*$
+# ^([/\w\.]+\/)?kubectl((?!edit|exec|run|go-template).)*$
+# exclusions for kubectl edit, exec, run, go-template
+#  NOT for kubectl get runtimeclasses
+^([/\w\.]+\/)?kubectl((?!\s(edit|exec|run|go-template)\s).)*$
 conf.kubectl
