separate kubectl get rule

--- a/.grc/grc.conf
+++ b/.grc/grc.conf
@@ -48,5 +48,9 @@ conf.exiftool_list
 # ^([/\w\.]+\/)?kubectl((?!edit|exec|run|go-template).)*$
 # exclusions for kubectl edit, exec, run, go-template
 #  NOT for kubectl get runtimeclasses
-^([/\w\.]+\/)?kubectl((?!\s(edit|exec|run|go-template)\s).)*$
+#^([/\w\.]+\/)?kubectl((?!\s(edit|exec|run|go-template)\s).)*$
+#conf.kubectl
+
+# kubectl get
+^([/\w\.]+\/)?kubectl\s+get\b
 conf.kubectl
