explicitly color kubectl get always

--- a/.grc/grc.conf
+++ b/.grc/grc.conf
@@ -45,12 +45,16 @@ conf.git_config_list
 conf.exiftool_list
 
 # original KubeCTL rule:
+#   FYI still active from homebrew etc/grc.conf, IIUC first hit wins (so my rules add to etc/grc.conf)
 # ^([/\w\.]+\/)?kubectl((?!edit|exec|run|go-template).)*$
+# conf.kubectl
+#
 # exclusions for kubectl edit, exec, run, go-template
 #  NOT for kubectl get runtimeclasses
 #^([/\w\.]+\/)?kubectl((?!\s(edit|exec|run|go-template)\s).)*$
 #conf.kubectl
-
-# kubectl get
+#
+# kubectl get - always color this
+#   why? b/c default rule excluded if edit/exec/run/go-template are present anywhere (even if part of a name)
 ^([/\w\.]+\/)?kubectl\s+get\b
 conf.kubectl
