--- a/.grc/grc.conf
+++ b/.grc/grc.conf
@@ -49,10 +49,11 @@ conf.exiftool_list
 # ^([/\w\.]+\/)?kubectl((?!edit|exec|run|go-template).)*$
 # conf.kubectl
 #
-# exclusions for kubectl edit, exec, run, go-template
-#  NOT for kubectl get runtimeclasses
-#^([/\w\.]+\/)?kubectl((?!\s(edit|exec|run|go-template)\s).)*$
-#conf.kubectl
+# attempt to fix by flagging valid scenarios:
+#   NOT using for now, as explicit kubectl get makes more sense
+#   FIX for subcommand filtering: (not if entire word is edit/exec/run/go-template)
+# ^([/\w\.]+\/)?kubectl((?!\s(edit|exec|run|go-template)\s).)*$
+# conf.kubectl
 #
 # kubectl get - always color this
 #   why? b/c default rule excluded if edit/exec/run/go-template are present anywhere (even if part of a name)
