--- a/.config/bat/config
+++ b/.config/bat/config
@@ -11,7 +11,11 @@
 --map-syntax "packages.config:XML"
 --map-syntax "*.csproj:XML"
 --map-syntax "*.nuspec:XML"
+
+# grc config files:
 --map-syntax "grc.conf:INI" # close enough for primary grc.conf (regex/file pairs, with comments)
+--map-syntax "**/.grc/**/conf.*:INI" # grc's conf.* rules format is INI-like (aside from separator ---)
+
 --map-syntax "config.txt:INI" # raspberry pi /boot/fimrware/config.txt # PRN filter to full file path /boot/config.txt and /boot/firmware/config.txt?
 --map-syntax "*.sln:INI"
 
