grc kubectl explain rules

--- a/.grc/grc.conf
+++ b/.grc/grc.conf
@@ -59,3 +59,7 @@ conf.exiftool_list
 #   why? b/c default rule excluded if edit/exec/run/go-template are present anywhere (even if part of a name)
 ^([/\w\.]+\/)?kubectl\s+get\b
 conf.kubectl
+
+# kubectl explain
+^([/\w\.]+\/)?kubectl\s+explain\b
+conf.kubectl_explain
