--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,10 @@
   "files.associations": {
     "ignore": "ignore"
   },
+  "cSpell.words": [
+    "grsp",
+    "grss",
+    "grst",
+    "grstr"
+  ],
 }
