zed updated AI settings

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,20 +1,24 @@
 // https://zed.dev/docs/configuring-zed
 {
   // "theme": "Andromeda", // kinda like this or smth in between (todo build my own colors)
+  "language_models": {
+    "openai": {
+      "api_url": "http://localhost:11434/v1",
+      "low_speed_timeout_in_seconds": 30
+    }
+  },
   "vim_mode": true,
   "ui_font_size": 24,
   "buffer_font_size": 16, // aka editor
   "format_on_save": "off",
   "hover_popover_enabled": true, // default=true (make explicit)
   "assistant": {
-    "version": "1",
-    "provider": {
-      "name": "openai",
-      "type": "openai",
-      "default_model": "gpt-4-turbo-preview",
-      "api_url": "http://localhost:11434/v1",
-      "low_speed_timeout_in_seconds": 30
-    }
+    "default_model": {
+      "provider": "openai",
+      "model": "gpt-4-turbo-preview"
+    },
+    "version": "2",
+    "provider": null
   },
   "git": {
     "inline_blame": {
