w00t it works already - prompt it for multi line unless it did return that and paste loses the lines

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -3,6 +3,7 @@
   // "theme": "Andromeda", // kinda like this or smth in between (todo build my own colors)
   "language_models": {
     "openai": {
+      "version": "1",
       "api_url": "http://localhost:11434/v1",
       "low_speed_timeout_in_seconds": 30
     }
