use codegemma w/ zed, surprisngly good inline editing at least in one case codegemma-1.1-7b-it

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,6 +1,13 @@
 // https://zed.dev/docs/configuring-zed
 {
   // "theme": "Andromeda", // kinda like this or smth in between (todo build my own colors)
+  "assistant": {
+    "default_model": {
+      "provider": "ollama",
+      "model": "codegemma:latest"
+    },
+    "version": "2"
+  },
   "vim_mode": true,
   "ui_font_size": 24,
   "buffer_font_size": 16, // aka editor
