--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -7,7 +7,7 @@
   "assistant": {
     "default_model": {
       "provider": "ollama",
-      "model": "llama3.2:1b"
+      "model": "llama3.2-vision:11b"
     },
     "version": "2"
   },
