--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -13,13 +13,14 @@
   "assistant": {
     "default_model": {
       "provider": "ollama",
-      "model": "llama3.2:1b"
+      "model": "llama3.2-vision:11b"
     },
     "version": "2",
-    "inline_alternatives": [
-      { "provider": "ollama", "model": "llama3.2:3b" },
-      { "provider": "ollama", "model": "llama3.2-vision:11b" }
-    ]
+    // "inline_alternatives": [
+    //   { "provider": "ollama", "model": "llama3.1:8b" },
+    //   { "provider": "ollama", "model": "llama3.2:3b" },
+    //   { "provider": "ollama", "model": "llama3.2:1b" }
+    // ]
   },
   "vim_mode": true,
   "ui_font_size": 24,
