--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -13,7 +13,7 @@
   "assistant": {
     "default_model": {
       "provider": "ollama",
-      "model": "llama3.2-vision:11b"
+      "model": "llama3.2:3b"
     },
     "version": "2",
     // "inline_alternatives": [
