--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -89,6 +89,7 @@
         // *** csharp-ls ***
         // PRN try omnisharp-roslyn instead of csharp-ls (download archive from https://github.com/OmniSharp/omnisharp-roslyn/releases)
         //     and dotnet-format for formatting?
+        // csharp-ls is supposed to be faster than omnisharp-roslyn, and not require heavy deps (i.e. mono on mac/linux)
         "csharp-ls": {
             // todo get rid of blocking messages on startup, every time wow... i.e. the MIT license messages that I have to hit Enter through and every time locating a solution/project file message by message
             //      wow, cannot get rid of the messages?! https://github.com/razzmatazz/csharp-language-server/issues/64
