--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -92,12 +92,14 @@
         //     and dotnet-format for formatting?
         // csharp-ls is supposed to be faster than omnisharp-roslyn, and not require heavy deps (i.e. mono on mac/linux)
         "csharp-ls": {
-            // todo get rid of blocking messages on startup, every time wow... i.e. the MIT license messages that I have to hit Enter through and every time locating a solution/project file message by message
-            // interestin that this doesn't always happen, i.e. if I have codeql/csproj's Program.cs it doesn't block me, if i have dotnet/example/csproj it does, smth to do w/ multi project repos?
-            //   FYI "args": [ "--loglevel", "warning" ], // did not do anything to help
-            //      wow, cannot get rid of the messages?! https://github.com/razzmatazz/csharp-language-server/issues/64
-            //   interesting, at some point it stop blocking and just shows messages at bottom in cmdline without needing to hit Enter repeatedly, that smells very much like when sometimes I have to hit enter after opening vim and a session restore, its random too
-            //   !! this may very well be a timing issue on plugin load and sometimes things load before others and thus only sometimes I get prompted to hit Enter!
+            // hit-enter - several long messages on startup, to avoid needing to hit Enter:
+            //   happens when cmdheight=1 and not big enough to show full message (IIUC tT in shortmess don't apply to this b/c Ex mode)
+            //   *** zoom out so messages fit
+            //   *** hit `q` to stop listing messages (or j key)
+            //   set cmdheight=2 (yuck)
+            //   see :h hit-enter (in message.txt)
+            //       g< - see messages from last cmd (msgs before q)
+            //
             "command": "csharp-ls",
             "filetypes": [ "cs" ],
             "rootPatterns": [ "*.csproj", ".vim/", ".git/", ".hg/" ],
