--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,9 @@ indent_style = space
 indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
-# end_of_line = lf 
+# end_of_line = lf
 
+[*.lua]
+# https://github.com/CppCXY/EmmyLuaCodeStyle/blob/master/docs/format_config.md
+max_line_length = 200
 
