--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -18,6 +18,10 @@
     // }
   },
   "assistant": {
+    "default_model": {
+      "provider": "ollama",
+      "model": "llama3.2-vision:11b"
+    },
     "version": "2"
     // "inline_alternatives": [
     //   { "provider": "ollama", "model": "llama3.1:8b" },
