grc ollama show via Claude

--- a/.grc/grc.conf
+++ b/.grc/grc.conf
@@ -63,3 +63,6 @@ conf.kubectl
 # kubectl explain
 ^([/\w\.]+\/)?kubectl\s+explain\b
 conf.kubectl_explain
+# Ollama show command
+^ollama show
+conf.ollama_show
