--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -20,7 +20,7 @@
   "assistant": {
     "default_model": {
       "provider": "ollama",
-      "model": "llama3.2-vision:11b"
+      "model": "llama3.3:latest"
     },
     "version": "2"
     // "inline_alternatives": [
