--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -118,11 +118,18 @@
 
         // https://github.com/ndonfris/fish-lsp#client-configuration-required
         // https://github.com/ndonfris/fish-lsp-language-clients/tree/coc_minimal
+        // config discussions: https://github.com/ndonfris/fish-lsp/discussions
         "fish-lsp": {
             "command": "fish-lsp",
             "filetypes": [
                 "fish"
             ],
+            "env": {
+                // set env vars to configure lsp server options
+                // https://github.com/ndonfris/fish-lsp?tab=readme-ov-file#environment-variables
+                // 2003 is warning about universal variables in a non-interactive context, F it... I don't care... I use them in my ask-openai.fish script which is used in interactive contexts to change ask settings
+                "fish_lsp_diagnostic_disable_error_codes": "2003",
+            },
             "args": [
                 "start"
             ],
