--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -13,6 +13,14 @@
     "pyright.inlayHints.variableTypes": false,
     "pyright.inlayHints.parameterTypes": false,
     "pyright.inlayHints.functionReturnTypes": false,
+    // coc-pyright provides formatters too
+    // https://github.com/fannheyward/coc-pyright?tab=readme-ov-file#configurations
+    "python.formatting.provider": "yapf",
+    "python.formatting.yapfArgs": [
+        // "--style",
+        // "{based_on_style: pep8, indent_width: 4}"
+    ],
+
 
     // *** json
     // *** coc-json - (not prettier, see below)
