--- a/zsh/universals/3-last/ask-openai/rusts/Cargo.toml
+++ b/zsh/universals/3-last/ask-openai/rusts/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 reqwest = { version = "0.11", features = ["json"] } # For HTTP requests
 tokio = { version = "1", features = ["full"] }      # For async runtime
 serde = { version = "1.0", features = ["derive"] }  # For JSON serialization
+dirs = "5.0"
+
