--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -17,7 +17,8 @@
     // https://github.com/fannheyward/coc-pyright?tab=readme-ov-file#configurations
     "python.formatting.provider": "yapf",
     "python.formatting.yapfArgs": [
-        "--style", "{column_limit: 200, }"
+        "--style", "{column_limit: 200, ALLOW_SPLIT_BEFORE_DICT_VALUE: False}"
+
         // "{based_on_style: pep8, indent_width: 4}"
     ],
 
