--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,14 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "debugpy>=1.8.11",
+    "httpx>=0.28.1",
+    "iterm2>=2.9",
+    "keyring>=25.6.0",
+    "keyrings-cryptfile>=1.3.9",
+    "openai>=1.58.1",
+    "pyperclip>=1.9.0",
+    "rope>=1.13.0",
+    "yapf>=0.43.0",
+]
