--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "dotfiles"
 version = "0.1.0"
-description = "Add your description here"
+description = "A rug for all my dotfiles, configs, scripts, etc"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
