--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "iterm2>=2.9",
     "keyring>=25.6.0",
     "keyrings-cryptfile>=1.3.9",
+    "neovim>=0.3.1",
     "openai>=1.58.1",
     "pyperclip>=1.9.0",
     "rope>=1.13.0",
