--- a/.config/iina/iina.plist
+++ b/.config/iina/iina.plist
@@ -14,6 +14,8 @@
 	<false/>
 	<key>SUUpdateGroupIdentifier</key>
 	<integer>2820402930</integer>
+	<key>actionAfterLaunch</key>
+	<integer>2</integer>
 	<key>currentInputConfigName</key>
 	<string>VLC Default</string>
 	<key>enableAdvancedSettings</key>
