hrm... not sure about adding files in same dir... but lets get the setting recorded by toggling it

--- a/.config/iina/iina.plist
+++ b/.config/iina/iina.plist
@@ -20,6 +20,8 @@
 	<string>VLC Default</string>
 	<key>enableAdvancedSettings</key>
 	<false/>
+	<key>playlistAutoAdd</key>
+	<false/>
 	<key>softVolume</key>
 	<real>100</real>
 </dict>
