I am not a huge fan of coveringt he video with the timeline player controls.. so at least put it on bottom (not floating over middle ish)

--- a/.config/iina/iina.plist
+++ b/.config/iina/iina.plist
@@ -20,6 +20,8 @@
 	<string>VLC Default</string>
 	<key>enableAdvancedSettings</key>
 	<false/>
+	<key>oscPosition</key>
+	<integer>2</integer>
 	<key>softVolume</key>
 	<real>100</real>
 </dict>
