--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -71,8 +71,10 @@
     ],
     // lua LSP server has formatter builtin:
     // - LSP: https://github.com/LuaLS/lua-language-server/wiki/Formatter
-    // - formatter: https://raw.githubusercontent.com/CppCXY/EmmyLuaCodeStyle
     // *** use editorconfig to set lua format config unless I switch to another formatter like stylua?
+    //   - formatter: https://github.com/CppCXY/EmmyLuaCodeStyle/blob/master/README_EN.md
+    //   - options: https://github.com/CppCXY/EmmyLuaCodeStyle/blob/master/lua.template.editorconfig
+    //
     //  TODO ugh I cannot stop it from wrapping lines with func calls and multi args (i.e. debug.lua keymaps for nvim-dap)
     //    editorconfig works and defaultConfig is not working for me
     //       is it possible editorconfig clobbers all settings if its present?
