--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -59,15 +59,15 @@
     // best way to test this config, open split view with config on top and on bottom a lua file with an issue, modify config and save it and it will refresh the lua file coc diagnostics immediately, but not if edited in another instance of VIM or not using VIM btw
     // the following config (workspace.library, runtime.version/path) were added to make vim globals work in coc-lua (not marked as undefined and have completions)
     "Lua.workspace.library": [
-        "/opt/homebrew/Cellar/neovim/0.10.2_1/share/nvim/runtime/lua",
-        "/opt/homebrew/Cellar/neovim/0.10.2_1/share/nvim/runtime/lua/vim/lsp",
+        "/opt/homebrew/Cellar/neovim/0.10.3/share/nvim/runtime/lua",
+        "/opt/homebrew/Cellar/neovim/0.10.3/share/nvim/runtime/lua/vim/lsp",
+        "/Applications/Hammerspoon.app/Contents/Resources/extensions",
         // "/Applications/Hammerspoon.app/Contents/Resources/extensions", // doesn't work, don't try again unless you find good reason to
     ],
     "Lua.runtime.version": "LuaJIT",
     "Lua.runtime.path": [
         "?.lua",
         "?/init.lua",
-        "/opt/homebrew/Cellar/neovim/0.10.2_1/share/nvim/runtime/lua/vim"
     ],
     // lua LSP server has formatter builtin:
     // - LSP: https://github.com/LuaLS/lua-language-server/wiki/Formatter
